@@ -1,3 +1,11 @@
+Wed Dec  6 00:45:02 PST 2006 (adam) - Release 0.31
+	Fixed a bug where we would report a blank content-type negotiation.
+	Added Data::Dump as a dependency.
+
+Tue Dec  5 13:02:08 PST 2006 (adam)
+	Made the YAML::HTML view automatically append content-type=text/html on
+	  the resulting URLs.
+
 Sun Dec  3 12:24:16 PST 2006 (adam) - Release 0.30
 	Updated the Makefile to support optional installation of the different
 	  Serialization formats.
